# yuimarl

./: .env.template  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  agreement.html  agreement.pug  build_pug.sh  database.html  database.pug  deploy.html  deploy.pug  develop.html  develop.pug  devsetup.html  devsetup.pug  devsetupMac.html  devsetupMac.pug  devsetupMySql.pug  devsetupMysql.html  download.html  download.pug  ganttchart.html  ganttchart.pug  history.html  history.pug  howtouse.html  howtouse.pug  index.html  index.pug  index2.html  index2.pug  markdown.html  markdown.pug  pom.xml  spec.html  spec.pug  specification.html  specification.pug  (+1 more)
00doc/: Yuimarl.xlsx
01db/: docker-compose.yml
01db/init/: 01_ddl.sql  02_init_data.sql
03docker/: docker-compose.yml
css/: style.css  style3.css  style4.css  yuimarl.css
e2e_test/: package.json  playwright.config.ts
e2e_test/tests/: global.setup.ts  yuimarl.spec.ts
e2etest/: README.md  pyproject.toml  test_yuimarl.py
e2etest/python/: README.md  pyproject.toml  test_yuimarl.py
e2etest/senario/: __init__.py  senario1.py
e2etest/typescript/: .env.template  README.md  package-lock.json  playwright.config.ts  tsconfig.json
gantt-chart/: README.md  index.html  package-lock.json  package.json
gantt-chart/src/: calendarBody.ts  calendarHeader.ts  columnBody.ts  columnHeader.ts  common.ts  ganttFrame.ts  ganttRow.ts  idb.ts  main.ts  (+4 more)
images/: Thumbs.db
includes/: footer.html  footer.pug  logo.html  logo.pug  nav.html  nav.pug
js/: tagManager.js  tagManager2.js
proto/: agreement.html  agreement.pug  contact.html  contact.pug  index.html  index.pug  project_add.html  project_add.pug  ticket_create.html  ticket_create.pug
src/: main.rs
static/: success.html
(+427 files in other folders)
