[package]
name = "yuimarl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-cookies = "0.10.0"
anyhow = { version = "1.0", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["serde", "v4", "v7"] }
firestore = "0.41.0"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
chrono = "0.4.37"
dotenv = "0.15.0"
futures = "0.3.30"
